commit 7b588594f74aba9caf325ed9b7895bff46e7800c
Author: m1k3s <pbrane0@gmail.com>
Date:   Thu Mar 1 13:07:11 2018 -0500

    update Changelog

    Signed-off-by: m1k3s <pbrane0@gmail.com>

commit ba9514ed287383ea0c86c3ecb11de2566780b602
Author: m1k3s <pbrane0@gmail.com>
Date:   Thu Mar 1 13:06:16 2018 -0500

    fixed crocs blooming out woth shaders

    Signed-off-by: m1k3s <pbrane0@gmail.com>

commit 5264d3d94c614d9f86f395838be98a2016f30453
Author: m1k3s <pbrane0@gmail.com>
Date:   Thu Feb 22 10:51:07 2018 -0500

    fixed render bug causing crocs to bloom out with shaders

    Signed-off-by: m1k3s <pbrane0@gmail.com>

commit 1641858a7b7d37a34a8721da128172fc949ea0c5
Author: m1k3s <pbrane0@gmail.com>
Date:   Sun Feb 18 11:06:58 2018 -0500

    removed EntityAIFleeCold class
    made changes to getCanSpawnHere method in base classes,
            test for warm climate don't spawn in or near cold biomes
    Changed forgeRegisties deprecated method getValues to
    getValuesCollection


    Signed-off-by: m1k3s <pbrane0@gmail.com>

commit f6fa999a004f989660dc328eeae4302a4be441fc
Author: m1k3s <pbrane0@gmail.com>
Date:   Tue Jan 23 07:56:46 2018 -0500

    Updated Changelog
    fixed config not saving on server
    adding cold avoidance AI, WIP

    Signed-off-by: m1k3s <pbrane0@gmail.com>

commit d4dc5974071cda40ff830458f301b90aee5539ad
Merge: bc56ead 77ead5d
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Dec 30 08:31:18 2017 -0500

    Merge branch '1.12.2a'

commit 77ead5de3d3eb17c0a219fc8e124fc4d2e7e2d0b
Author: m1k3s <pbrane0@gmail.com>
Date:   Sat Dec 30 08:30:02 2017 -0500

    added scaling to turtles.
    added cold biome avoidance AI. still testing and tweaking
    made largecrocs slightly larger

commit bc56eadf0de14b74504ec262ea4ab3c947e46b09
Merge: b9c1342 ddcf997
Author: m1k3s <pbrane0@gmail.com>
Date:   Tue Nov 28 13:15:38 2017 -0500

    Merge branch '1.12.2a'

commit ddcf997c3176861029aac37cd9e64b6eca3f6189
Author: m1k3s <pbrane0@gmail.com>