@@ -1,0 +1,19 @@
+package com.reptiles.common;
+
+@SuppressWarnings("unused")
+public class ReptileServerProxy implements IProxy {
+    @Override
+    public void preInit() {
+
+    }
+
+    @Override
+    public void Init() {
+
+    }
+
+    @Override
+    public void postInit() {
+
+    }
+}
